# mmk-updater

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  state.json
mmk_updater/: __init__.py  __main__.py  _base.py  _lc.py  generic.py  main.py  ui_tkinter.py
mmk_updater/i18n/: __init__.py  data.py
mmk_updater/qt/: __init__.py  confirm_dialog.py  main.py
mmk_updater/qt/designer/: update_confirm_dialg.ui
scripts/: make_qt_parts.sh
