[tool.poetry]
name = "mmk-updater"
description = "mmk-updater"
version = "0.15.0"
authors = ["MelianMiko <support@mmk.pw>"]
include = [
    { path = "mmk_updater/qt/designer/*.py", format = ["wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pillow = "^10.4.0"
qasync = "^0.27.1"
pyqt6 = "^6.7.1"
aiohttp = "^3.10.5"

[build-system]
build-backend = "poetry.core.masonry.api"
